--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewort" content="width=device-width, initial-scale=1"/>
     <link href="https://fonts.googleapis.com/css?family=Montez&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/index.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/common.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
@@ -29,13 +30,14 @@
     <div class="main-container">
         <div>
             <button class="btn btn-warning rounded-0 mr-1" id="btn-allposts">All Posts</button>
-            <button class="btn btn-warning rounded-0" id="btn-createpost">Create Post</button>
+            <button class="btn btn-warning rounded-0" id="btn-createpost" data-toggle="modal" 
+                                              data-target="#modalCreatePost">Create Post</button>
         </div>
     </div>
 
     <!-- sign in Modal -->
 <div class="modal fade" id="modalSignin" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content rounded-0">
         <div class="modal-header">
           <h5 class="modal-title" id="modalLabel">Welcome Back</h5>
@@ -69,7 +71,7 @@
   
   <!-- signup modal-->
   <div class="modal fade" id="modalSignUp" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-      <div class="modal-dialog">
+      <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content rounded-0">
           <div class="modal-header">
             <h5 class="modal-title" id="modalLabel">Get Started</h5>
@@ -103,6 +105,38 @@
         </div>
       </div>
     </div>
+
+    <!-- create post modal-->
+    <div class="modal fade bd-example-modal-lg" id="modalCreatePost" tabindex="-1" role="dialog" aria-labelledby="largeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content rounded-0">
+              <div class="modal-header">
+                <h5 class="modal-title" id="modalLabel">Pen Your Post</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="inputPostTitle">Title</label>
+                        <input type="text" class="form-control" id="inputPostTitle" placeholder="Enter title of your post" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPostContent">Contents</label>
+                        <textarea class="form-control" id="inputPostContent" rows="10" 
+                                             placeholder="Enter the contents of your post"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <div class="text-center">
+                            <button type="submit" class="btn btn-success rounded-0">Create</button>
+                        </div>
+                    </div>
+                </form>  
+              </div>
+            </div>
+        </div>
+      </div>
 
     <script src="scripts/index.js"></script>
 </body>
