--- a/html/post.html
+++ b/html/post.html
@@ -27,14 +27,23 @@
             </div>
         </div>
     </header>
-    <header>
-        <div class="container">
-            -- Logo, Navigation & Search Bar ï¿½-
+    <div class="post-container container py-3 mt-3">
+        <header>
+            <div class="postheader">
+                <h3 class="text-center" id="post-title">Centered Text</h3>
+            </div>
+            <div class="d-flex flex-row justify-content-between">
+                <div class="p-2 bd-highlight">Flex tem 1</div>
+                <div class="p-2 bd-highlight">Flex item 2</div>
+              </div>
+        </header>
+        <div class="postbody">
+            <p class="text-justify">In a professional context it often happens that private or corporate clients corder a publication to be made and presented with the actual content still not being ready. Think of a news blog that's filled with content hourly on the day of going live. However, reviewers tend to be distracted by comprehensible content, say, a random text copied from a newspaper or the internet. The are likely to focus on the text, disregarding the layout and its elements. Besides, random text risks to be unintendedly humorous or offensive, an unacceptable risk in corporate environments. Lorem ipsum and its many variants have been employed since the early 1960ies, and quite likely since the sixteenth century.</p>
         </div>
-    </header>
- 
-    <div id="body" class="container">
-        -- Site Main content --
+        <div class="likePostButton">    
+            <button  id= "likePost" onclick="postLiked()"><i class="fa fa-thumbs-up"></i> Like</button> 
+        </div>
+        <span id="commentCount">Be the first one to like this!</span>
     </div>
     <script src="../scripts/post.js"></script>
 </body>
