--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </header>
     <div class="main-container">
         <div>
-            <button class="btn btn-warning rounded-0 mr-1" id="btn-allposts">All Posts</button>
+            <button class="btn btn-warning rounded-0 mr-1" id="btn-allposts" onclick="viewposts()">All Posts</button>
             <button class="btn btn-warning rounded-0" id="btn-createpost" data-toggle="modal" 
-                                              data-target="#modalCreatePost">Create Post</button>
+                     data-target="#modalCreatePost">Create Post</button>
         </div>
     </div>
 
@@ -39,13 +39,14 @@
 <div class="modal fade" id="modalSignin" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content rounded-0">
-        <div class="modal-header">
-          <h5 class="modal-title" id="modalLabel">Welcome Back</h5>
+        <div class="modal-header pb-0 no-border">
+          <h3 class="modal-title" id="modalLabel">Welcome Back</h3>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
+          <hr class="pt-3 separator">
           <form>
               <div class="form-group">
                   <label for="inputUsername">Username</label>
@@ -73,13 +74,14 @@
   <div class="modal fade" id="modalSignUp" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content rounded-0">
-          <div class="modal-header">
-            <h5 class="modal-title" id="modalLabel">Get Started</h5>
+          <div class="modal-header no-border">
+            <h3 class="modal-title" id="modalLabel">Get Started</h3>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
+            <hr class="pt-3 separator">
             <form>
                 <div class="form-group">
                     <label for="inputName">Name</label>
