--- a/html/postslist.html
+++ b/html/postslist.html
@@ -139,7 +139,20 @@
                                                 onclick="markForDelete(this.id)"></i>
                                                 </span>
                                             </div>
-                                            <p id = "postbody-5" class="card-text postdetail">Node.js treats each JavaScript file as a separate module. For instance, if you have a file containing some code and this file is named xyz.js, then this file is treated as a module in Node, and you can say that you’ve created a module named xyz.</p>
+                                            <p id = "postbody-5" class="card-text postdetail">Node.js treats each JavaScript file as a separate module. 
+                                                For instance, if you have a file containing some code and this file is named xyz.js, 
+                                                then this file is treated as a module in Node, and you can say that you’ve created a module named xyz.
+                                                In one sentence: Node.js shines in real-time web applications employing push technology over websockets. 
+                                                What is so revolutionary about that? Well, after over 20 years of stateless-web based on the stateless 
+                                                request-response paradigm, we finally have web applications with real-time, two-way connections, 
+                                                where both the client and server can initiate communication, allowing them to exchange data freely. 
+                                                This is in stark contrast to the typical web response paradigm, where the client always initiates communication.
+                                                Additionally, it’s all based on the open web stack (HTML, CSS and JS) running over the standard port 80.
+                                                One might argue that we’ve had this for years in the form of Flash and Java Applets—but in reality, 
+                                                those were just sandboxed environments using the web as a transport protocol to be delivered to the client. 
+                                                Plus, they were run in isolation and often operated over non-standard ports, 
+                                                which may have required extra permissions and such.
+                                            </p>
                                             <span>
                                                 <i class="fa fa-ellipsis-h" id="5" onclick="viewPost(this.id)"></i>
                                             </span>
