--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <div class="modal fade" id="modalSignUp" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content rounded-0">
-          <div class="modal-header no-border">
+          <div class="modal-header pb-0 no-border">
             <h3 class="modal-title" id="modalLabel">Get Started</h3>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
