Updated to reuse the header code across all files

--- a/html/post.html
+++ b/html/post.html
@@ -57,6 +57,21 @@
             <div id="comments"></div>
         </div>
     </div>
+
+        <!-- sign in Modal -->
+<div class="modal fade" id="modalSignin" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" id="signin-modal">
+    </div>
+  </div>
+  
+  <!-- signup modal-->
+  <div class="modal fade" id="modalSignUp" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" id="signup-modal">
+      </div>
+  </div>
+
+
     <script src="../scripts/post.js"></script>
+    <script src="../scripts/common.js"></script>
 </body>
 </html>
