--- a/html/postslist.html
+++ b/html/postslist.html
@@ -164,7 +164,7 @@
                     </div>
                     <!-- confirmation box modal-->
                     <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-dialog modal-dialog-centered confirm-modal">
                             <div class="modal-content rounded-0">
                                 <div class="modal-body">
                                     <p>Are you sure you want to delete this post?</p>
@@ -180,6 +180,20 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- sign in Modal -->
+                   <div class="modal fade" id="modalSignin" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+                       <div class="modal-dialog modal-dialog-centered" id="signin-modal">
+                       </div>
+                   </div>
+  
+                  <!-- signup modal-->
+                 <div class="modal fade" id="modalSignUp" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" id="signup-modal">
+                    </div>
+                </div>
+
                     <script src="../scripts/postslist.js"></script>
+                    <script src="../scripts/common.js"></script>
                 </body>
             </html>
