--- a/index.html
+++ b/index.html
@@ -37,76 +37,15 @@
 
     <!-- sign in Modal -->
 <div class="modal fade" id="modalSignin" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content rounded-0">
-        <div class="modal-header pb-0 no-border">
-          <h3 class="modal-title" id="modalLabel">Welcome Back</h3>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <hr class="pt-3 separator">
-          <form>
-              <div class="form-group">
-                  <label for="inputUsername">Username</label>
-                  <input type="text" class="form-control" id="inputUsername" placeholder="Enter your username" required>
-              </div>
-              <div class="form-group">
-                  <label for="inputPassword">Password</label>
-                  <input type="password" class="form-control" id="inputPassword" placeholder="Enter your password" required>
-              </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-success btn-block rounded-0">Sign In</button>
-                    <p class="gosignup">
-                        Not a member?
-                        <a data-target="#modalSignUp" data-toggle="modal" href="#modalSignUp" 
-                             onclick="$('#modalSignin').modal('hide')">Sign Up</a>
-                    </p>
-                </div>
-          </form>
-        </div>
-      </div>
+    <div class="modal-dialog modal-dialog-centered" id="signin-modal">
     </div>
   </div>
   
   <!-- signup modal-->
   <div class="modal fade" id="modalSignUp" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content rounded-0">
-          <div class="modal-header pb-0 no-border">
-            <h3 class="modal-title" id="modalLabel">Get Started</h3>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <hr class="pt-3 separator">
-            <form>
-                <div class="form-group">
-                    <label for="inputName">Name</label>
-                    <input type="text" class="form-control" id="inputName" placeholder="Enter your Name" required>
-                </div>
-                <div class="form-group">
-                  <label for="inputUsername">Username</label>
-                  <input type="text" class="form-control" id="inputUsername" placeholder="Enter your username" required>
-              </div>
-                <div class="form-group">
-                    <label for="inputPassword">Password</label>
-                    <input type="password" class="form-control" id="inputPassword" placeholder="Enter your Password" required>
-                </div>
-                <div class="form-group">
-                  <label for="inputConfirmPassword">Confirm Password</label>
-                  <input type="password" class="form-control" id="inputConfirmPassword" placeholder="Re-enter your Password" required>
-              </div>
-              <div class="form-group">
-                    <button type="submit" class="btn btn-success btn-block rounded-0">Sign Up</button>
-                </div>
-            </form>
-          </div>
-        </div>
+      <div class="modal-dialog modal-dialog-centered" id="signup-modal">
       </div>
-    </div>
+  </div>
 
     <!-- create post modal-->
     <div class="modal fade bd-example-modal-lg" id="modalCreatePost" tabindex="-1" role="dialog" aria-labelledby="largeModalLabel" aria-hidden="true">
@@ -141,6 +80,7 @@
       </div>
 
     <script src="scripts/index.js"></script>
+    <script src="scripts/common.js"></script>
 </body>
 
 </html>
