Fixing small issues like adding pointer cursor on thrash and elipsis icons and some notification messages

--- a/html/postslist.html
+++ b/html/postslist.html
@@ -41,7 +41,7 @@
                                             <div class="d-flex p-2 justify-content-between">
                                                 <p id="posttitle-1" class="card-title">‘let’ me be a ‘const’(ant), not a ‘var’(iable)!</p>
                                                 <span>
-                                                    <i class="fa fa-trash" data-toggle="modal" data-target="#confirmModal" id="1"
+                                                    <i class="fa fa-trash c-pointer" data-toggle="modal" data-target="#confirmModal" id="1"
                                                     onclick="markForDelete(this.id)"></i>
                                                 </span>
                                             </div>
@@ -49,7 +49,7 @@
                                                 either of these keywords can be used to declare a variable of any type (datatype) in JavaScript. 
                                                 Though all the three keywords are used for the same purpose, they are different.</p>
                                             <span>
-                                                <i class="fa fa-ellipsis-h" id="1" onclick="viewPost(this.id)"></i>
+                                                <i class="fa fa-ellipsis-h c-pointer" id="1" onclick="viewPost(this.id)"></i>
                                             </span>
                                         </div>
                                     </div>
@@ -65,14 +65,14 @@
                                             <div class="d-flex p-2 justify-content-between">
                                                 <p id="posttitle-2" class="card-title">What is linting and how can it save you time?</p>
                                                 <span>
-                                                    <i id="2" class="fa fa-trash" data-toggle="modal" data-target="#confirmModal"
+                                                    <i id="2" class="fa fa-trash c-pointer" data-toggle="modal" data-target="#confirmModal"
                                         onclick="markForDelete(this.id)"></i>
                                                 </span>
                                             </div>
                                             <p id = "postbody-2" class="card-text postdetail">One of the biggest challenges in software development is time. 
                                     It’s something we can’t easily get more of, but linting can help us make the most out of the time we have.</p>
                                             <span>
-                                                <i class="fa fa-ellipsis-h" id="2" onclick="viewPost(this.id)"></i>
+                                                <i class="fa fa-ellipsis-h c-pointer" id="2" onclick="viewPost(this.id)"></i>
                                             </span>
                                         </div>
                                     </div>
@@ -88,7 +88,7 @@
                                             <div class="d-flex p-2 justify-content-between">
                                                 <p id="posttitle-3" class="card-title">How to Get More Views on Your Tech Blog</p>
                                                 <span>
-                                                    <i id="3" class="fa fa-trash" data-toggle="modal" data-target="#confirmModal"
+                                                    <i id="3" class="fa fa-trash c-pointer" data-toggle="modal" data-target="#confirmModal"
                                     onclick="markForDelete(this.id)"></i>
                                                 </span>
                                             </div>
@@ -96,7 +96,7 @@
                                 you've already seen everyone and their cat start a blog, YouTube channel, or Patreon. 
                                 We all want to become stars, or at the very least, a recognizable name in the industry.</p>
                                             <span>
-                                                <i class="fa fa-ellipsis-h" id="3" onclick="viewPost(this.id)"></i>
+                                                <i class="fa fa-ellipsis-h c-pointer" id="3" onclick="viewPost(this.id)"></i>
                                             </span>
                                         </div>
                                     </div>
@@ -112,14 +112,14 @@
                                             <div class="d-flex p-2 justify-content-between">
                                                 <p id="posttitle-4" class="card-title">How to write easily describable code</p>
                                                 <span>
-                                                    <i id="4" class="fa fa-trash" data-toggle="modal" data-target="#confirmModal"
+                                                    <i id="4" class="fa fa-trash c-pointer" data-toggle="modal" data-target="#confirmModal"
                                                     onclick="markForDelete(this.id)"></i>
                                                 </span>
                                             </div>
                                             <p id = "postbody-4" class="card-text postdetail">When code is not describable using words, most people have to do some mental mapping to turn it in to words. This wastes mental energy, and you run the risk of getting the mapping wrong. Different people will map to different words, which
                                             leads to confusion when discussing the code.</p>
                                             <span>
-                                                <i class="fa fa-ellipsis-h" id="4" onclick="viewPost(this.id)"></i>
+                                                <i class="fa fa-ellipsis-h c-pointer" id="4" onclick="viewPost(this.id)"></i>
                                             </span>
                                         </div>
                                     </div>
@@ -135,7 +135,7 @@
                                             <div class="d-flex p-2 justify-content-between">
                                                 <p id="posttitle-5" class="card-title">Everything you should know about ‘module’ & ‘require’ in Node.js</p>
                                                 <span>
-                                                    <i id="5" class="fa fa-trash" data-toggle="modal" data-target="#confirmModal"
+                                                    <i id="5" class="fa fa-trash c-pointer" data-toggle="modal" data-target="#confirmModal"
                                                 onclick="markForDelete(this.id)"></i>
                                                 </span>
                                             </div>
@@ -154,7 +154,7 @@
                                                 which may have required extra permissions and such.
                                             </p>
                                             <span>
-                                                <i class="fa fa-ellipsis-h" id="5" onclick="viewPost(this.id)"></i>
+                                                <i class="fa fa-ellipsis-h c-pointer" id="5" onclick="viewPost(this.id)"></i>
                                             </span>
                                         </div>
                                     </div>
